# FIRE-Bench

./: .env.example  .gitignore  .ls-lint.yml  PLAN.md  README.md  flake.nix  pyproject.toml  requirements.txt  run_agent.py  run_experiment.sh  run_plan_generator.sh  run_tree_parser.sh
.github/workflows/: ci.yml  gha_lint.yml
agents/codex/: run.py
agents/opencode_go/: run.py
agents/openhands/: run.py
agents/simple/: run.py
benchmark/: plan_generator.py  tree_parser.py
benchmark/papers/activation_control/: conclusion.txt
benchmark/papers/awareness_detection/: conclusion.txt
benchmark/papers/charxiv_chart_understanding/: conclusion.txt
benchmark/papers/cot_faithfulness_gaps/: conclusion.txt
benchmark/papers/cot_in_planning/: conclusion.txt
benchmark/papers/cot_without_prompting/: conclusion.txt
benchmark/papers/counterfactual_simulatability/: conclusion.txt
benchmark/papers/distributive_fairness/: conclusion.txt
benchmark/papers/fallback_behaviors/: conclusion.txt
benchmark/papers/fractal_complexity_of_language/: conclusion.txt
benchmark/papers/hallucination_awareness/: conclusion.txt
benchmark/papers/hallucination_snowballing/: conclusion.txt
benchmark/papers/hallusionbench_illusion/: conclusion.txt
benchmark/papers/icl_from_repetition/: conclusion.txt
benchmark/papers/introspective_learning/: conclusion.txt
benchmark/papers/lifebench_length_following/: conclusion.txt
benchmark/papers/llm_confidence_elicitation/: conclusion.txt
benchmark/papers/llm_racial_bias_in_medicine/: conclusion.txt
benchmark/papers/llm_value_consistency/: conclusion.txt
benchmark/papers/llms_assume_rationality/: conclusion.txt
benchmark/papers/llms_lack_self_correction/: conclusion.txt
benchmark/papers/lost_in_the_middle/: conclusion.txt
benchmark/papers/mathvista_visual_math/: conclusion.txt
benchmark/papers/mcq_selection_bias/: conclusion.txt
benchmark/papers/object_hallucination_pope/: conclusion.txt
benchmark/papers/persona_reasoning_biases/: conclusion.txt
benchmark/papers/persona_with_catch/: conclusion.txt
benchmark/papers_unverified/: README.md
configs/: opencode_go_subset.json
eval/: __init__.py  claude_subscription_eval.py  opencode_go_eval.py
eval/RAGChecker/: eval.py  new_papers.md  utils.py
scripts/: __init__.py  diagnose_opencode_go_judge.py  evaluate_opencode_go_judge.sh  rewrite_instructions.py  run_opencode_go_subset.sh
tests/: test_claude_subscription_eval.py  test_llm_inference_opencode_go.py  test_opencode_go_agent.py  test_opencode_go_eval.py  test_opencode_go_subset_portfolio.py  test_run_opencode_go_subset_script.py
utils/: llm_inference.py
(+763 files in other folders)
