[project]
name = "fire-bench"
version = "0.1.0"
description = "FIRE-Bench experiment runner and evaluator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.13.0",
  "anthropic>=0.100.0",
  "datasets>=4.8.5",
  "numpy>=2.4.4",
  "openai>=2.36.0",
  "pandas>=3.0.2",
  "python-dotenv>=1.2.2",
  "scikit-learn>=1.8.0",
  "torch>=2.11.0",
  "transformers>=5.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.deptry]
ignore_notebooks = true
extend_exclude = [
  "benchmark",
  "eval/RAGChecker",
  "run_agent.py",
  "utils/cot_decoding.py",
]
per_rule_ignores = { DEP002 = ["accelerate", "datasets", "numpy", "pandas", "scikit-learn", "torch"], DEP003 = ["requests"] }

[tool.vulture]
paths = ["agents", "eval", "scripts", "tests", "utils"]
min_confidence = 100
sort_by_size = true
exclude = [
  ".venv",
  "build",
  "dist",
  "benchmark",
  "eval/RAGChecker",
  "log",
  "results",
  "run_agent.py",
  "runs",
  "utils/cot_decoding.py",
]

[tool.uv]
managed = true
default-groups = ["lint", "typecheck", "test"]
exclude-newer = "1 week"

[dependency-groups]
lint = [
  "ruff==0.15.11",
]
typecheck = [
  "ty==0.0.31",
]
test = [
  "pytest==9.0.3",
  "pytest-mock==3.15.1",
  "pytest-cov==7.1.0",
]
audit = [
  "deptry==0.25.1",
  "vulture==2.16",
]

[tool.ruff]
target-version = "py311"
src = ["agents", "eval", "scripts", "tests", "utils"]
line-length = 119
exclude = [
  "agents/claude",
  "agents/codex",
  "agents/openhands",
  "agents/simple",
  "benchmark",
  "eval/RAGChecker",
  "log",
  "results",
  "run_agent.py",
  "runs",
  "utils/cot_decoding.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PIE",
  "PTH",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "E501",
]

[tool.ty.src]
include = ["agents/opencode_go", "eval", "scripts", "tests", "utils"]
exclude = [
  "benchmark",
  "eval/RAGChecker",
  "log",
  "results",
  "run_agent.py",
  "runs",
  "utils/cot_decoding.py",
]

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.ty.rules]
deprecated = "warn"
invalid-argument-type = "warn"
no-matching-overload = "warn"
possibly-missing-attribute = "warn"
possibly-missing-import = "warn"
unsupported-operator = "warn"
unresolved-attribute = "warn"
unresolved-import = "warn"
possibly-unresolved-reference = "warn"
redundant-cast = "warn"
unknown-argument = "warn"
unused-type-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = false
